Bug 511751 - Slideshow wallpaper selection checkbox is not very visible
Summary: Slideshow wallpaper selection checkbox is not very visible
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 6.5.80
Platform: unspecified Linux
: NOR minor
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-11-07 06:54 UTC by neurosxboy
Modified: 2026-01-30 19:03 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description neurosxboy 2025-11-07 06:54:26 UTC
SUMMARY
In the slideshow wallpaper plugin, the checkboxes on the (default) wallpapers are barely visible on select wallpapers

STEPS TO REPRODUCE
1.  Go to desktop wallpaper selector
2.  Change wallpaper type to Slideshow

OBSERVED RESULT
On the wallpapers"Colorful Cups",  "Safe Landing" in breeze light, and "Altai", "Kay". "Colorful Cups", "Safe Landing" (The last two again) in breeze dark, the checkbox is barely visible. Whether the checkbox is visible is subjective, but I believe that the visibility issues with the wallpapers I have listed here are reasonable. 


EXPECTED RESULT
Checkbox the location, and state of the checkbox should be clear to the user (and preferably moderately visible on any wallpaper, because [In my opinion] artists shouldn't have to need to consider the visibility of the checkbox when creating new wallpapers). 


SOFTWARE/OS VERSIONS

Linux/KDE Plasma: KDE neon Unstable Edition
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.20.0
Qt Version: 6.9.2
Comment 1 TraceyC 2025-11-13 21:42:38 UTC
I can confirm that some checkboxes have low contrast vs wallpapers and are difficult to see on git-master, with Breeze Light and Dark
This is present on 6.5.2 as well

Also, with wallpapers like Coast that automatically change between dark and light have the circle icon overlap the checkboxes. Both are in the upper right hand corner.
This is a regression from 6.5.2 where the checkboxes are in the upper left corner
Comment 2 neurosxboy 2025-11-14 00:23:22 UTC
(In reply to TraceyC from comment #1)
> I can confirm that some checkboxes have low contrast vs wallpapers and are
> difficult to see on git-master, with Breeze Light and Dark
> This is present on 6.5.2 as well
> 
> Also, with wallpapers like Coast that automatically change between dark and
> light have the circle icon overlap the checkboxes. Both are in the upper
> right hand corner.
> This is a regression from 6.5.2 where the checkboxes are in the upper left
> corner

The overlap with the dark & light icon has already been resolved with https://invent.kde.org/azosion/plasma-workspace/-/commit/ef9e84e7078e6f3058e5a075358063954a363c0b
Comment 3 neurosxboy 2025-11-14 00:26:38 UTC
(In reply to neurosxboy from comment #2)
> (In reply to TraceyC from comment #1)
> > I can confirm that some checkboxes have low contrast vs wallpapers and are
> > difficult to see on git-master, with Breeze Light and Dark
> > This is present on 6.5.2 as well
> > 
> > Also, with wallpapers like Coast that automatically change between dark and
> > light have the circle icon overlap the checkboxes. Both are in the upper
> > right hand corner.
> > This is a regression from 6.5.2 where the checkboxes are in the upper left
> > corner
> 
> The overlap with the dark & light icon has already been resolved with
> https://invent.kde.org/azosion/plasma-workspace/-/commit/
> ef9e84e7078e6f3058e5a075358063954a363c0b

Ah, sorry, wrong link https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5940
Comment 4 Akseli Lahtinen 2026-01-14 12:25:09 UTC
Looks like the checkbox is difficult to see because it's lacking background.
Comment 5 Bug Janitor Service 2026-01-20 14:09:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/6210
Comment 6 Bug Janitor Service 2026-01-30 14:16:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/breeze/-/merge_requests/579
Comment 7 David Redondo 2026-01-30 18:02:37 UTC
Git commit d74f67b5390a6e52c046ba49a0a0a927915432bf by David Redondo.
Committed on 30/01/2026 at 14:15.
Pushed by davidre into branch 'master'.

qstyle: Always draw checkbox backgrounds

While the transparent color works fine against normal view and window
backgrounds if drawn over random content it can result in bad contrast.
FIXED-IN: 6.6.0

M  +8    -16   kstyle/breezehelper.cpp

https://invent.kde.org/plasma/breeze/-/commit/d74f67b5390a6e52c046ba49a0a0a927915432bf
Comment 8 David Redondo 2026-01-30 19:03:21 UTC
Git commit 7d741d29e4a4f390bf86f870c434cc236fcca094 by David Redondo.
Committed on 30/01/2026 at 18:05.
Pushed by davidre into branch 'Plasma/6.6'.

qstyle: Always draw checkbox backgrounds

While the transparent color works fine against normal view and window
backgrounds if drawn over random content it can result in bad contrast.
FIXED-IN: 6.6.0

(cherry picked from commit d74f67b5390a6e52c046ba49a0a0a927915432bf)

M  +8    -16   kstyle/breezehelper.cpp

https://invent.kde.org/plasma/breeze/-/commit/7d741d29e4a4f390bf86f870c434cc236fcca094