qstyle: Always draw checkbox backgrounds

While the transparent color works fine against normal view and window
backgrounds if drawn over random content it can result in bad contrast.
BUG: 511751
FIXED-IN: 6.6.0